Unreviewed, non-unified build fix after r290003 https://bugs.webkit.org/show_bug.cgi?id=236774

* animation/FrameRateAligner.h:



Canonical link: https://commits.webkit.org/247399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290013 268f45cc-cd09-0410-ab3c-d52691b4dbfc